--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -162,7 +162,7 @@ a:hover {
   display: inline;
   position: absolute;
   padding: 8px 16px 8px 16px;
-  margin-top: 2px;
+  margin: 2px 0 0 8px;
   background-color: #CC3333;
   color: #fff;
   font-size: 0.8em;
@@ -171,7 +171,7 @@ a:hover {
 /* line 81, ../../../app/stylesheets/screen.scss */
 input[type="text"], input[type="password"] {
   padding: 5px;
-  width: 450px;
+  width: 350px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
@@ -495,11 +495,15 @@ form#new_session a {
   background-image: -moz-linear-gradient(top, #cccccc 0%, #cccccc 100%);
   background-color: #ccc;
 }
-/* line 271, ../../../app/stylesheets/screen.scss */
+/* line 269, ../../../app/stylesheets/screen.scss */
+#list .items .item.complete .body {
+  text-shadow: #aaaaaa -1px -1px 1px;
+}
+/* line 272, ../../../app/stylesheets/screen.scss */
 #list #completed_items {
   margin-top: 2em;
 }
-/* line 275, ../../../app/stylesheets/screen.scss */
+/* line 276, ../../../app/stylesheets/screen.scss */
 #list #hint {
   text-align: center;
   padding: 16px;
