--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,8 @@
     #container
       #header
         -if current_user
-          =link_to("< back to my lists", lists_path, :id => "my_lists") unless request.path == lists_path
+          -unless controller_name == 'lists' && action_name == 'index'
+            =link_to("< back to my lists", lists_path, :id => "my_lists")
         #account
           -if current_user
             =link_to h(current_user.username), edit_user_path
